restyle the landing page and change the copy

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -50,7 +50,7 @@
   position: Full Stack Engineer
   bio: >
     Sean's built and exited two tech startups, one of which was bought by
-    IBM. He’s been programming since he was six years old, and specializes in
+    IBM. He's been programming since he was six years old, and specializes in
     software engineering, product management, and cloud computing.
   active: true
   order: 20
@@ -82,7 +82,7 @@
   position: Full Stack Engineer
   bio: >
     Robert served as a Presidential Innovation Fellow in 2013 and co-founded 18F.
-    He’s been programming since he was 13 years old, and holds a PhD in computer science.
+    He's been programming since he was 13 years old, and holds a PhD in computer science.
     Robert builds robots, among other things, for public good. He specializes in software
     engineering, data science and engineering, engineering management, and agile practices.
   active: true
