--- a/_data/values.yml
+++ b/_data/values.yml
@@ -1,13 +1,13 @@
 - title: Deliver joyful client experiences.
   statement: >
-    Client service isn’t simply about complying with a contract. It’s about delivering joy.
+    Client service isn't simply about complying with a contract. It's about delivering joy.
     We do this by designing engaging experiences, constructing meaningful and memorable interactions,
     facilitating the discovery of new and profound insights, imparting mastery of new competencies,
     delivering transparent value toward the realization of important goals, and doing the little things well.
   order: 10
 - title: Remember whom we serve.
   statement: >
-    We serve the people who’ve dedicated their lives to serving the public and
+    We serve the people who've dedicated their lives to serving the public and
     creating better outcomes for citizens. Their missions are hard, complex, and admirable.
     They deserve our humility, empathy, objectivity, dedication, and reliable effort.
   order: 20
@@ -35,7 +35,7 @@
   order: 60
 - title: Collaborate for the win.
   statement: >
-    The best ideas and solutions don’t emerge from a one-person band,
+    The best ideas and solutions don't emerge from a one-person band,
     but rather from diverse teams of specialists who share knowledge,
     workload and sense of purpose, communicate openly, and trust each other.
     We actively foster the right conditions for collaboration to emerge, sparking
@@ -44,7 +44,7 @@
 - title: Give credit where it's due.
   statement: >
     Collaboration and innovation flourish in environments that fully recognize
-    people’s unique ideas and contributions. We go out of our way to acknowledge the
+    people's unique ideas and contributions. We go out of our way to acknowledge the
     original source, not just the most recent or loudest contributor.
   order: 80
 - title: Change for the better &mdash; every day.
@@ -85,6 +85,6 @@
     Giving back strengthens our communities, brings people together, provides us valuable
     experience, and makes us more engaged in our work. Giving back takes many forms from volunteering
     to sharing our collective knowledge (for example, via blog posts and open-source contributions).
-    As a HUBZone, it’s also about creating greater economic opportunities for the Chapel Hill, North Carolina
+    As a HUBZone, it's also about creating greater economic opportunities for the Chapel Hill, North Carolina
     community and beyond.
   order: 140
