--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ twitter_url: https://twitter.com/skylight_hq
 github_repo_url: https://github.com/skylight-hq
 github_issues_url: https://github.com/skylight-hq/skylight.digital/issues
 linkedin_url: https://www.linkedin.com/company/skylight-hq
-openco_url: ''
+carrot_url: ''
 hackerone_url: https://hackerone.com/skylight_qgvpb
 slack_invite_url: ''
 
