kin lane interview blog post

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -181,7 +181,7 @@
   profile_path: /about/#kin-lane
   image: /img/people/kin-lane.jpg
   image_description: Photo of Kin Lane
-  position: Full Stack Engineer
+  position: API Architect
   bio: >
     Kin served as a Presidential Innovation Fellow in 2013, and is a
     world-recognized expert in Application Programming Interfaces. He specializes
