--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -3,3 +3,16 @@
 #   url: https://skylight.workable.com/jobs/604049
 #   location: Washington DC
 #   order: 10
+
+- title: Experienced API Architect
+  url: https://skylight.workable.com/j/4A81FC9DC4
+  location: Washington DC
+  order: 10
+- title: API Engineer - Intern
+  url: https://skylight.workable.com/j/F8B7861FDE
+  location: Remote
+  order: 20
+- title: Administrative Assistant
+  url: https://skylight.workable.com/j/0AD21F1AE6
+  location: Remote
+  order: 30
