change nick's and josh's pics

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -253,7 +253,7 @@
   full_name: Nick Bristow
   short_name: N. Bristow
   profile_path: /about/#nick-bristow
-  image: /img/people/nick-bristow.png
+  image: /img/people/nick-bristow.jpg
   image_description: Photo of Nick Bristow
   position: Full Stack Engineer
   bio: >
