--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,7 +4,7 @@
 #   location: Washington DC
 #   order: 10
 
-- title: Experienced Java Developer
+- title: Experienced Java Developer (multiple)
   url: https://skylight.workable.com/jobs/541639
   location: Washington DC
   order: 10
