add job new posting

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,7 +8,11 @@
   url: https://skylight.workable.com/jobs/541639
   location: Washington DC
   order: 10
+- title: Digital Services Coach
+  url: https://skylight.workable.com/jobs/739454
+  location: Hartford, CT
+  order: 20
 - title: Administrative Assistant
   url: https://skylight.workable.com/j/0AD21F1AE6
   location: Remote
-  order: 20
+  order: 30
