change location requirement for digital services coach

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -10,7 +10,7 @@
   order: 10
 - title: Digital Services Coach
   url: https://skylight.workable.com/jobs/739454
-  location: Hartford, CT
+  location: Remote
   order: 20
 - title: Administrative Assistant
   url: https://skylight.workable.com/j/0AD21F1AE6
