--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,15 +4,19 @@
 #   location: Washington DC
 #   order: 10
 
+- title: Experienced Data Engineer (multiple)
+  url: https://skylight.workable.com/jobs/763712
+  location: Remote
+  order: 10
 - title: Experienced Java Developer (multiple)
   url: https://skylight.workable.com/jobs/541639
   location: Washington DC
-  order: 10
+  order: 20
 - title: Digital Services Coach
   url: https://skylight.workable.com/jobs/739454
   location: Remote
-  order: 20
+  order: 30
 - title: Administrative Assistant
   url: https://skylight.workable.com/j/0AD21F1AE6
   location: Remote
-  order: 30
+  order: 40
