publish agile coach position

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -20,3 +20,7 @@
   url: https://skylight.workable.com/j/0AD21F1AE6
   location: Remote
   order: 40
+- title: Agile Coach
+  url: https://skylight.workable.com/jobs/764021
+  location: Baltimore, MD
+  order: 50
