--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -10,7 +10,7 @@
   order: 10
 - title: Experienced Java Developer (multiple)
   url: https://skylight.workable.com/jobs/541639
-  location: Washington DC
+  location: Arlington, VA
   order: 20
 - title: Digital Services Coach
   url: https://skylight.workable.com/jobs/739454
@@ -24,3 +24,7 @@
   url: https://skylight.workable.com/jobs/764021
   location: Baltimore, MD
   order: 50
+- title: Experienced DevOps Engineer
+  url: https://skylight.workable.com/jobs/764028
+  location: Arlington, VA
+  order: 60
