add devops position

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -28,3 +28,7 @@
   url: https://skylight.workable.com/jobs/764028
   location: Arlington, VA
   order: 60
+- title: Experienced DevOps Engineer
+  url: https://skylight.workable.com/jobs/769476
+  location: Remote
+  order: 70
