change josh's img description

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -225,7 +225,7 @@
   short_name: J. Dorothy
   profile_path: /about/#josh-dorothy
   image: /img/people/josh-dorothy.jpg
-  image_description: Placeholder Photo of Josh Dorothy
+  image_description: Photo of Josh Dorothy
   position: DevOps Engineer
   bio: >
     Josh is a former member of the U.S. Digital Service, with a
