--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,19 +4,15 @@
 #   location: Washington DC
 #   order: 10
 
-- title: Experienced Data Engineer (multiple)
+- title: Experienced Data Engineer
   url: https://skylight.workable.com/jobs/763712
   location: Remote
   order: 10
-- title: Experienced Java Developer (multiple)
+- title: Experienced Java Developer
   url: https://skylight.workable.com/jobs/541639
   location: Arlington, VA
   order: 20
 - title: Experienced DevOps Engineer
-  url: https://skylight.workable.com/jobs/764028
-  location: Arlington, VA
-  order: 30
-- title: Experienced DevOps Engineer
   url: https://skylight.workable.com/jobs/769476
   location: Remote
-  order: 40
+  order: 30
