--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,19 +4,7 @@
 #   location: Washington DC
 #   order: 10
 
-- title: Experienced Software Engineer (Ruby)
-  url: https://skylight.workable.com/jobs/789504
-  location: Arlington, VA
+- title: Digital Services Coach
+  url: https://skylight.workable.com/jobs/819900
+  location: Remote
   order: 10
-- title: Experienced Software Engineer (Java)
-  url: https://skylight.workable.com/jobs/541639
-  location: Arlington, VA
-  order: 20
-- title: Experienced DevOps Engineer
-  url: https://skylight.workable.com/jobs/769476
-  location: Remote
-  order: 30
-- title: Experienced Data Engineer
-  url: https://skylight.workable.com/jobs/763712
-  location: Remote
-  order: 40
