--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -4,7 +4,7 @@
 #   location: Washington DC
 #   order: 10
 
-- title: Digital Services Coach
+- title: Digital Transformation Lead
   url: https://skylight.workable.com/jobs/819900
   location: Remote
   order: 10
