update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,3 +8,7 @@
   url: https://skylight.workable.com/jobs/819900
   location: Remote
   order: 10
+- title: Administrative Assistant
+  url: https://skylight.workable.com/jobs/827160
+  location: Remote
+  order: 20
