update open positions

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,7 +8,15 @@
   url: https://skylight.workable.com/jobs/819900
   location: Remote
   order: 10
+- title: UX Design Researcher
+  url: https://skylight.workable.com/jobs/828699
+  location: Remote
+  order: 20
+- title: Software Engineer (Ruby/Rails)
+  url: https://skylight.workable.com/jobs/828704
+  location: Remote
+  order: 30
 - title: Administrative Assistant
   url: https://skylight.workable.com/jobs/827160
   location: Remote
-  order: 20
+  order: 40
