add open position

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -16,7 +16,11 @@
   url: https://skylight.workable.com/jobs/828704
   location: Remote
   order: 30
+- title: DevOps Consultant
+  url: https://skylight.workable.com/jobs/831195
+  location: Baltimore, MD
+  order: 40
 - title: Administrative Assistant
   url: https://skylight.workable.com/jobs/827160
   location: Remote
-  order: 40
+  order: 50
