update aera's bio

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -321,8 +321,7 @@
   bio: >
     Aera formerly served as a user research for the University of Maryland.
     She's passionate about creating positive change through great user experiences,
-    and specializes in user interviews, analytics, usability testing, and information
-    architecture.
+    and specializes in user research and information architecture.
   active: true
   order: 50
   socials:
