change brandon's title

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -520,7 +520,7 @@
   profile_path: /about/#brandon-mader
   image: /img/people/brandon-mader.jpg
   image_description: Photo of Brandon Mader
-  position: Data Science Engineer
+  position: Data Scientist
   bio: >
     Brandon is a recent graduate of Dartmouth College, where he earned
     a double major in Math and Computer Science. He's passionate about making
