add shashank's photo

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -379,7 +379,7 @@
   full_name: Shashank Khandelwal
   short_name: S. Khandelwal
   profile_path: /about/#shashank-khandelwal
-  image: /img/people/theodore-roosevelt.png
+  image: /img/people/shashank-khandelwal.jpg
   image_description: Photo of Shashank Khandelwal
   position: Digital Transformer
   bio: >
